fixed service path

--- a/fakedownloader.service
+++ b/fakedownloader.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 User=root
 WorkingDirectory=/opt/fakedownloader
-Environment=PATH=/opt/fakedownloader/venv/bin
+Environment=PATH=/opt/fakedownloader/venv/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 ExecStart=/opt/fakedownloader/venv/bin/python /opt/fakedownloader/main.py
 Restart=always
 RestartSec=10
